Archive2/ed/b48b251b9aad18/output
gcc
main.cpp: In function 'main':
main.cpp:5:9: error: expected ')' before 'a'
        "a multiline\
         ^
clang
main.cpp:5:9: error: expected ')'
       "a multiline\
        ^
main.cpp:4:11: note: to match this '('
    printf("Here's\
          ^
main.cpp:7:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 1 error generated.
